# Zephra-A-Conbuild-Insight

./: README.md
Andriod Studio/: MapFragment.txt
Construction-Site-Safety-PPE-Detection-main/: app.py
Pro Package/Andriod Studio/: MainActivity.txt  Manifest.txt  activity_main_land.txt
Pro Package/Raspberry Pi Pico/compass_cal/: CMakeLists.txt  compass_cal.cpp
Pro Package/Raspberry Pi Pico/fc_quad_gt_cc/: CMakeLists.txt  fc_quad_gt_cc.cpp
Pro Package/Raspberry Pi Zero/: tcp_uart_c.cpp  yct.cpp
Raspberry Pi Pico/: CMakeLists.txt  compass_calibration.uf2  flight_controller.uf2
Raspberry Pi Zero/: compass_cal.txt
